# neutreeko

./: .gitignore  Cargo.toml  README.md  index.html  index.scss
assets/models/web/: model.bpk
src/: ai.rs  lib.rs  logic.rs  main.rs  mcts.rs  minmax.rs  platform.rs  train.rs  ui.rs
src/ai/: alphazeutreeko.rs  mcts.rs  minmax.rs  mod.rs
src/ai/ann/: block.rs  inputouput.rs  mod.rs  train.rs  utils.rs
src/ai/ann/train/: mod.rs  utils.rs
