[package]
name = "neutreeko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
strum = "0.27"
strum_macros = "0.27"
yew = { version = "0.22.0", features = ["csr"] }
log = "0.4.29"
wasm-logger = "0.2.0"
petgraph = "0.8.3"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "Window", "Performance"] }
burn = { version = "0.20.0", default-features = false, features = ["ndarray", "train"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "train"
path = "src/train.rs"
