[package]
name = "neutreeko"
version = "0.1.0"
edition = "2021"

[features]
default = []
train = ["burn/train"]  # Only enable train feature when explicitly requested

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
strum = "0.27"
strum_macros = "0.27"
yew = { version = "0.22.0", features = ["csr"] }
log = "0.4.29"
wasm-logger = "0.2.0"
petgraph = "0.8.3"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "Window", "Performance"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Burn for webapp (without train feature)
burn = { version = "0.20.0", default-features = false, features = ["ndarray"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Burn for native training (with train feature)
burn = { version = "0.20.0", default-features = false, features = ["ndarray", "train"] }

[[bin]]
name = "neutreeko-train"
path = "src/train.rs"
required-features = ["train"]
